# AdventOfCode24

./: .gitignore
d1/: main.c
d10/: main.c
d2/: main.c
d3/: CMakeLists.txt  main.c
d4/: main.c
d5/: main.c
d6/: main.c
d7/: main.c
d8/: main.c
d9/: main.c
